# voirec

./: .containerignore  .env.example  .gitignore  Containerfile  Containerfile.cuda  Containerfile.rocm  README.md  podman-compose.yml  pyproject.toml  shell.nix
src/voirec/: __init__.py  api.py  cli.py  transcribers.py
