[project]
name = "voirec"
version = "0.0.1"
description = "Audio transcription tool using Whisper, Canary, GigaAM, and Parakeet via ONNX"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "onnx-asr>=0.10.2",
    "onnxruntime>=1.20.0",
    "huggingface-hub>=0.27.0",
    "click>=8.3.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
]

[project.scripts]
voirec = "voirec.cli:main"
voirec-api = "voirec.api:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voirec"]

[project.optional-dependencies]
diarize = [
    "resemblyzer>=0.1.1",
    "scikit-learn>=1.0",
    "setuptools<72",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "black>=26.3.0",
    "ruff>=0.15.5",
]
